--- a/css/style.css
+++ b/css/style.css
@@ -218,28 +218,7 @@ a {
 .card-button {
 	padding: 20px;
 }
-@media (max-width: 777px) {
-	.menu-icon {
-		display: block;
-		position: relative;
-		z-index: 10;
-	}
-	.menu-icon.active {
-		background: url(../images/close.png) no-repeat center / cover;
-	}
-	.header-menu-body {
-		position: fixed;
-		top: -100%;
-		left: 0;
-		z-index: 9;
-		height: 100%;
-		width: 100%;
-		background: #ffffff;
-		transition: all 0.5s ease;
-		display: block;
-		padding: 0 0 150px;
-	}
-}
+
 .header-menu-body.active {
 	top: 0;
 }
@@ -294,4 +273,62 @@ a {
 	font-size: 16px;
 	line-height: 19px;
 	color: #ffffff;
+}
+
+@media (max-width: 777px) {
+	.menu-icon {
+		display: block;
+		position: relative;
+		z-index: 10;
+	}
+	.menu-icon.active {
+		background: url(../images/close.png) no-repeat center / cover;
+	}
+	.header-menu-body {
+		position: fixed;
+		top: -100%;
+		left: 0;
+		z-index: 9;
+		height: 100%;
+		width: 100%;
+		background: #ffffff;
+		transition: all 0.5s ease;
+		display: block;
+		padding: 0 0 150px;
+	}
+	.header-menu-item {
+		margin: 0 0 30px 0;
+		text-align: center;
+	}
+	.header-menu-link {
+		font-size: 35px;
+	}
+}
+
+@media (max-width: 550px) {
+	.pads-block {
+		display: block;
+	}
+	.pads-button {
+		display: block;
+		margin: 0 0 20px 0;
+		text-align: center;
+		max-width: 330px;
+	}
+}
+
+@media (max-width: 450px) {
+	.menu-icon {
+		margin: 0 0 0 20px;
+	}
+	.header-search {
+		padding: 5px 10px;
+		margin: 0 0 0 15px;
+		max-width: 140px;
+	}
+	.header-logo-img {
+		height: 20px;
+	}
+	.pads-title {
+	}
 }
